--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ layout: default
     {% for posts in category %}
       {% for post in posts %}
 	{% if post.url %}
-        <li><a href="{{ post.url }}">{{ post.title }} ({{ post.date | date: "%b %-d, %Y" }})</a></li>
+        <li><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }} ({{ post.date | date: "%b %-d, %Y" }})</a></li>
 	{% endif %}
       {% endfor %}
     {% endfor %}
